Correctly encode URL of thumbnails

Summary:
As per the amazingly detailed bug report, the spec says URLs should be
percent encoded. The main knock-on effect is we get a different hash
value for our preview file and we duplicate thumbnails if a user uses a
GNOME app.

BUG: 393015

Test Plan:
Logged out and back in
Copied jpeg to a file with spaces
opened dolphin
Found relevant cache file in ~/.cache/thumbnails/normal based on timestamp
exiftool showed the correct URI.

Thumb URI                       : file:///tmp/with%20spaces.jpg

I assume the hash is now "correct" but I don't have a way to check

Reviewers: ngraham

Reviewed By: ngraham

Subscribers: ngraham, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D12133